name:                SkinMachiiiiineeeeeee
version:             0.1.0.0
license:             AllRightsReserved
author:              TLeth, UserLasse
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable SkinMachiiiiineeeeeee
  main-is:             Main.hs
  ghc-options: -Wall -O  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >= 4 && < 5
                     , attoparsec
                     , lens-family
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  